Updated files and added new assets

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -56,20 +56,20 @@
            <!---- <p>Lorem ipsum</p> -->
            <div class="row">
                 <div class="steps">
-                    <h3>Create your list</h3>
-                    <p>Start by creating your grocery list. Input as many or as few details as you want. Specify brands or package sizes if you prefer, or let the website propose the cheapest options for you.</p>
+                    <h3>Create Your List</h3>
+                    <p>Add as much detail as you like, from brand preferences to package sizes. Choose how you'd like to receive your groceries and fine-tune your search with custom filters.</p>
                 </div>
                 <div class="steps">
-                    <h3>Compare prices</h3>
-                    <p>ComPrix finds the cheapest option for your entire shopping list. <br><br> You can choose your preferred delivery method (home delivery or pick-up), and the supermarket choice will reflect where the overall price is the lowest.</p>
+                    <h3>Personalise the Cart</h3>
+                    <p>We scan four top supermarket chains to find the most cost-effective choices for you. Feel free to tweak your choices for a more personalised shopping experience.</p>
                 </div>
                 <div class="steps">
-                    <h3>Choose & shop</h3>
-                    <p>Choose your favorite supermarket and products. If any of the suggested options aren't your favourites, you have the flexibility to further customize them. <br><br> ComPrix simplifies the shopping process with direct links to online stores, and the final shop choice adjusts automatically based on your preferences.</p>
+                    <h3>Choose & Shop</h3>
+                    <p>View the total cost for your entire basket, including your preferred delivery method. Pick your favourite supermarket and seamlessly place your order directly with the retailer.</p>
                  </div>
                  <div class="steps">
-                    <h3>Enjoy savings & quality</h3>
-                    <p>Shop smart and enjoy savings on your grocery bills while ensuring you're selecting the most cost-effective options for your needs and gaining insights into nutritional and eco scores.</p>
+                    <h3>Savour the Savings</h3>
+                    <p>Discover the joy of smart shopping. ComPrix helps you cut your grocery bills by up to 20%, plus offers insights into the nutritional and environmental impact of your choices.</p>
                 </div>
            </div>
         </section>
