--- a/templates/landing.html
+++ b/templates/landing.html
@@ -22,6 +22,8 @@
                         <li><a href="{{ url_for('recipes') }}">Recipes & Substitutes</a></li>
                         <li><a href="{{ url_for('badges') }}">Sustainability & Health Badges</a></li>
                         <li><a href="{{ url_for('blog') }}">Blog</a></li>
+                        <li><a href="{{ url_for('login_page') }}">Login</a></li>
+                        <li><a href="{{ url_for('signup_page') }}">Signup</a></li>
                         <!--<li><a href="">About Us</a></li>-->
                         <!--<li><a href="">FAQs & Support</a></li>-->
                     </ul>
@@ -153,7 +155,7 @@
                     <h3>Help</h3>
                     <ul>
                         <li><a href="#">Contact</a></li>
-                        <li><a href="#">FAQs</a></li>
+                        <li><a href="{{ url_for('faq') }}">FAQs</a></li>
                     </ul>
                 </div>
                 
