--- a/static/style_landing.css
+++ b/static/style_landing.css
@@ -378,7 +378,7 @@ p{
     background-color: #f44336;
     color: white;
     border: none;
-    border-radius: 4px;
+    /*border-radius: 4px;*/
     margin-top: 10px;
     display: block;
 }
