--- a/templates/shopping_list.html
+++ b/templates/shopping_list.html
@@ -29,6 +29,8 @@
                     <li><a href="{{ url_for('recipes') }}">Recipes & Substitutes</a></li>
                     <li><a href="{{ url_for('badges') }}">Sustainability & Health Badges</a></li>
                     <li><a href="{{ url_for('blog') }}">Blog</a></li>
+                    <li><a href="{{ url_for('login_page') }}">Login</a></li>
+                    <li><a href="{{ url_for('signup_page') }}">Signup</a></li>
                     <!--<li><a href="">About Us</a></li>-->
                     <!--<li><a href="">FAQs & Support</a></li>-->
                 </ul>
