--- a/templates/signup.html
+++ b/templates/signup.html
@@ -116,7 +116,7 @@
 <body>
     <div class="login-box">
         <span class="close-btn" onclick="goBack()">&times;</span>
-        <img src="{{ url_for('static', filename='images/logo_black.png') }}" class="logo">
+        <img src="{{ url_for('static', filename='images/logo_black.PNG') }}" class="logo">
         <h2>Sign up for ComPrix</h2>
         <form action="/signup" method="post">
             <input type="text" name="username" placeholder="Username" required>
