--- a/templates/login.html
+++ b/templates/login.html
@@ -118,7 +118,7 @@
 <body>
     <div class="login-box">
         <span class="close-btn" onclick="goBack()">&times;</span>
-        <img src="{{ url_for('static', filename='images/logo_black.png') }}" class="logo">
+        <img src="{{ url_for('static', filename='images/logo_black.PNG') }}" class="logo">
         <h2>Sign in to ComPrix</h2>
         <!-- Example Social Media Logins -->
         <button><img src="{{ url_for('static', filename='images/google.png') }}"> Sign in with Google</button>
