Updated files and added new assets

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -227,8 +227,10 @@
             // opening and closing the pop-up
             function openPopup() {
                 popup.classList.add("open-popup"); 
+                navLinks.style.right = "-200px";
             }
 
+            
             function closePopup() {
                 popup.classList.remove("open-popup"); 
             }
