--- a/templates/signup.html
+++ b/templates/signup.html
@@ -111,6 +111,13 @@
     font-size: 30px;
     cursor: pointer;
 }
+
+@media screen and (max-width: 600px) {
+    .login-box {
+        width: 98%; /* Reduce width for small screens */
+        padding: 30px 20px; /* Reduce padding for small screens */
+        margin-top: 0;
+    }
      </style>
 </head>
 <body>
