--- a/static/style_landing.css
+++ b/static/style_landing.css
@@ -138,7 +138,8 @@ nav .fa{
 
     /*viewsing the main menu at the side*/
     .nav-links{
-        position: absolute;
+        /*position: absolute;*/
+        position: fixed;
         background: #f44336;
         height: 100vh;
         width: 200px;
@@ -677,4 +678,11 @@ input {
     background-color: #edeef0dc; /* Color when hovered, adjust as needed */
     color: #333; /* Text color when hovered */
     /* Add other hover styles if needed */
+}
+
+@media screen and (max-width: 600px) {
+    .popup {
+    z-index: 100000; /* Adjust this value based on your navLinks z-index */
+    position: fixed; /* or 'absolute' depending on your layout */
+    }
 }
