--- a/templates/login.html
+++ b/templates/login.html
@@ -112,6 +112,13 @@
 
 }
 
+@media screen and (max-width: 600px) {
+    .login-box {
+        width: 98%; /* Reduce width for small screens */
+        padding: 30px 20px; /* Reduce padding for small screens */
+        margin-top: 0;
+    }
+
 </style>
 </head>
 
