--- a/templates/base.html
+++ b/templates/base.html
@@ -54,8 +54,12 @@
         <h4>Contact Us</h4>
         <!--<p>Lorem ipsum</p>-->
         <div class="icons">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-instagram"></i>
+            <a href="https://www.facebook.com/comprix.shop" target="_blank" class="instagram-icon">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="https://www.instagram.com/comprix.shop/" target="_blank" class="instagram-icon">
+                <i class="fab fa-instagram"></i>
+            </a>
             <i class="fab fa-linkedin-in"></i>
         </div>
         <p>© 2023 ComPrix</p>
