--- a/templates/landing.html
+++ b/templates/landing.html
@@ -70,8 +70,8 @@
                     <p>View the total cost for your entire basket, including your preferred delivery method. Pick your favourite supermarket and seamlessly place your order directly with the retailer.</p>
                  </div>
                  <div class="steps">
-                    <h3>Savour the Savings</h3>
-                    <p>Discover the joy of smart shopping. ComPrix helps you cut your grocery bills by up to 20%, plus offers insights into the nutritional and environmental impact of your choices.</p>
+                    <h3>Enjoy the Savings</h3>
+                    <p>Discover the joy of smart shopping. ComPrix helps you cut your grocery bills by up to 20%, and offers insights into the nutritional and environmental impact of your choices.</p>
                 </div>
            </div>
         </section>
@@ -83,7 +83,7 @@
            <div class="row">
                 <div class="feature">
                     <div class="image-container">
-                    <img src="{{ url_for('static', filename='images/feature1_canva.png') }}">
+                    <img src="{{ url_for('static', filename='images/feature1_canva_.png') }}">
                     </div>
                     <!--<div class="layer">SEE MINUTE 44</div> -->
                     <h3>Real-Time Price Comparison</h3>
@@ -200,8 +200,12 @@
                     </form>--->
                     <p id="footerThankYouMessage" style="display:none;">Thank you for subscribing!</p>
                     <div class="social-icons">
-                        <i class="fab fa-facebook-f"></i>
-                        <i class="fab fa-instagram"></i>
+                        <a href="https://www.facebook.com/comprix.shop" target="_blank">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="https://www.instagram.com/comprix.shop/" target="_blank">
+                            <i class="fab fa-instagram"></i>
+                        </a>                        
                         <i class="fab fa-linkedin-in"></i>        
                     </div>
                 </div>
